--- a/app/index.html
+++ b/app/index.html
@@ -3,19 +3,28 @@
     <head>
         <meta charset="utf-8">
         <title>chromeapp modern</title>
+        <script src="bower_components/platform/platform.js"></script>
+
+        <link rel="import" href="bower_components/paper-elements/metadata.html">
+        <link rel="import" href="bower_components/font-roboto/roboto.html">
+
+        <link rel="import" href="bower_components/core-header-panel/core-header-panel.html">
+        <link rel="import" href="bower_components/core-toolbar/core-toolbar.html">
+        <link rel="import" href="bower_components/paper-tabs/paper-tabs.html">
         
         <!-- bower:css -->
+
+        <!-- endbower -->
+
+        <!-- bower:js -->
         <!-- endbower -->
 
         <!-- build:css styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
         <!-- endbuild -->
     </head>
-    <body>
+    <body touch-action="auto">
         <h1>'Allo</h1>
-         
-        <!-- bower:js -->
-        <!-- endbower -->
 
         <!-- build:js scripts/index.js -->
         <script src="scripts/index.js"></script>
